--- a/app/static/css/order.css
+++ b/app/static/css/order.css
@@ -1,28 +1,61 @@
-    .overlay{
-        text-decoration: none;
-        display: block;
-        margin-left: 160px;
-        margin-top: 0px;
-    }
-    .restaurant{
-        font-family: monospace;
-        font-size: 30px;
-        text-transform: uppercase;
-    }
-    .restaurant:link{
+.restaurant{
+    margin-left: 160px;
+}
+.restaurant a{
+    font-family: monospace;
+    font-size: 50px;
+}
+.restaurant a:link{
+    color: black;
+    text-decoration: none;
+}
+.restaurant a:hover{
+    color: darkred;
+}
+.restaurant:visited{
         color: #00363a;
         text-decoration: none;
     }
-    .restaurant:visited{
-        color: #00363a;
-        text-decoration: none;
-    }
-    .restaurant:hover{
-        color: darkred;
-    }
-    .restaurant-adress{
-        font-family: Monaco, sans-serif;
-        font-size: 15px;
-    }
-    .google-block{
-    }
+.body{
+    background-color: white;
+
+}
+#over{
+    position: absolute;
+    margin-top: 20px;
+}
+.mapouter{
+    position: absolute;
+    margin-left: 350px;
+}
+.icon-address{
+    position: absolute;
+}
+.icon-address img{
+    max-width: 100%;
+    max-height: 100%;
+    width: 35px;
+    height: 35px;
+}
+.icon-time{
+    position: absolute;
+}
+.icon-time img{
+    max-width: 100%;
+    max-height: 100%;
+    width: 28px;
+    height: 28px;
+    margin-top: 10px;
+    margin-left: 4px;
+}
+.icon-phone{
+    position: absolute;
+}
+.icon-phone img{
+    max-width: 100%;
+    max-height: 100%;
+    width: 29px;
+    height: 29px;
+    margin-top: 10px;
+    margin-left: 4px;
+}
