--- a/app/templates/order_page/order.html
+++ b/app/templates/order_page/order.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <title>Order</title>
+    <link rel="stylesheet" href="../../static/css/order.css">
 </head>
 <div>
     {% include 'home_page/../navbar.html' %}
 </div>
-<link rel="stylesheet" href="../../static/css/order.css">
 
-<body>
-    <div class="overlay">
-        {% for city, restaurants in cities_restaurants.items %}
-            {% for restaurant, location in restaurants.items %}
-            <a href="http://127.0.0.1:8000/app/{{ city.name }}/{{ restaurant.name }}" class="restaurant">
-                {{ restaurant.name}}
-            </a>
+<body class="body">
+    {% for city, restaurants in cities_restaurants.items %}
+        {% for restaurant, location in restaurants.items %}
+            <div class="restaurant">
+                <div id="over">
+                <a href="http://127.0.0.1:8000/app/{{ city.name }}/{{ restaurant.name }}">{{ restaurant.name | capfirst }}</a>
+
                 {% for adress, google_link in location.items %}
-            <div class="restaurant-adress">
-                {{ adress }}
-            </div>
-            <div class="google-block">
-                <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src={{ google_link }} frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div></div>
+                    <div class="icon-address"><img src="{% static 'img/order/icon_address.png' %}"></div>
+                    <div style="margin-top: 8px; margin-left: 35px;">{{ adress }}</div>
+                    <div class="icon-time"><img src="{% static 'img/order/icon_time.png' %}"></div>
+                    <div style="margin-top: 15px; margin-left: 37px;">Monday-Sunday: 10:00-23:00</div>
+                    <div class="icon-phone"><img src="{% static 'img/order/icon_phone.jpg' %}"></div>
+                    <div style="margin-top: 15px; margin-left: 37px;">777 666 333</div>
+
+                </div>
+
+                    <div class="mapouter"><div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src={{ google_link }} frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:200px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}</style></div></div>
+                    <hr style="border-top: 3px dashed #bbb;">
+
                 {% endfor %}
-            {% endfor %}
+            </div>
         {% endfor %}
-    </div>
+    {% endfor %}
 </body>
-</html>
