Add algorithm of modifying meal names, food_type names. Some html fixes, adds

--- a/app/templates/restaurant.html
+++ b/app/templates/restaurant.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <div>
-            <a href="http://127.0.0.1:8000/app/create/{{ city }}/{{ restaurants.restaurant_name }}"> {{ restaurants }}</a>
+            <a href="http://127.0.0.1:8000/pizza/create/{{ city }}/{{ restaurants.name }}"> {{ restaurants }}</a>
         </div>
     </div>
 </body>
