--- a/app/templates/cities.html
+++ b/app/templates/cities.html
@@ -8,7 +8,7 @@
     <div>
         {% for city in cities %}
             <div>
-                <a href="http://127.0.0.1:8000/app-pizza/create/{{ city }}"> {{ city }}</a>
+                <a href="http://127.0.0.1:8000/pizza/create/{{ city }}"> {{ city }}</a>
             </div>
         {% endfor %}
     </div>
