--- a/app/templates/order_page/restaurant/order_restaurant.html
+++ b/app/templates/order_page/restaurant/order_restaurant.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>MENU</title>
 </head>
-<body>
+<div>
+    {% include 'home_page/../navbar.html' %}
+</div>
+<body style="margin-left: 200px">
     <div style="font-size: 60px; font-family: monospace; color: #121212">{{ restaurant_obj.name | capfirst }}</div>
     {% for ft, meal_queryset in menu.items %}
             <div style="font-size: 30px; font-family: monospace; color: red;">{{ ft.food_type }}</div>
