Add checking if delivery end point is too far from restaurant (then delivery option is not available)

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -63,7 +63,7 @@
                 <span> <a href="{% url 'logout' %}">Logout</a> </span>
             {% else %}
                 <div class="button-login">
-                    <a href="login">Login</a>
+                    <a href="/pizza/login">Login</a>
                 </div>
             {% endif %}
         </div>
