--- a/app/templates/order_page/order.html
+++ b/app/templates/order_page/order.html
@@ -8,6 +8,8 @@
 </head>
 <div>
     {% include 'home_page/../navbar.html' %}
+
+
 </div>
 
 <body class="body">
@@ -25,11 +27,15 @@
                     <div style="margin-top: 15px; margin-left: 37px;">777 666 333</div>
                 </div>
 
-                    <div class="mapouter"><div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src={{ google_link }} frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:200px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}</style></div></div>
+                    <div class="mapouter"><div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src={{ google_link }} frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:200px;width:200px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}</style></div></div>
                     <hr style="border-top: 3px dashed #bbb;">
 
                 {% endfor %}
             </div>
         {% endfor %}
     {% endfor %}
+    <div>
+    {% include 'home_page/../address_order_popup.html' %}
+
+    </div>
 </body>
